--- a/thin/templates/thin/transcription_add.html
+++ b/thin/templates/thin/transcription_add.html
@@ -5,26 +5,34 @@
 
 
 {% block content %}
-{% load widget_tweaks %}
-{% load multifor %}
+  {% load widget_tweaks %}
+  {% load multifor %}
 
-<form method="post" action="">
-  {{formset.management_form}}
-  {% csrf_token %}
-  <div>
+  <form method="post" action="">
+    {{ formset.management_form }}
+    {% csrf_token %}
+    <table class="table table-striped">
+      <thead>
+      <tr>
+        <th>#</th>
+        <th>Gloss</th>
+        <th>Transcription</th>
+      </tr>
+      </thead>
+      <tbody>
       {% for form in formset; gloss in gloss_list %}
-      
-      {% for transcription in form %}
-      
-     
-      <p> {{forloop.parentloop.counter}} {{ gloss }} : {{transcription}} </p>
-
+        {% for transcription in form %}
+          <tr>
+            <td>{{ forloop.parentloop.counter }}</td>
+            <td>{{ gloss }}</td>
+            <td>{{ transcription|add_class:"form-control" }}</td>
+          </tr>
+        {% endfor %}
       {% endfor %}
-      
-      {% endfor %}
-  </div>
-  <button>Save</button>
-</form>
+      </tbody>
+    </table>
+    <button type="submit" class="btn btn-primary">Save</button>
+  </form>
 
 
-{% endblock%}
+{% endblock %}
