--- a/thin/static/css/websurv.less
+++ b/thin/static/css/websurv.less
@@ -128,6 +128,17 @@ ul.dash > li:before {
 /*
  * IPA Keyboard
  */
-div.btn-toolbar {
-  display: inline-block;
+
+div#ipa_buttons {
+  position: fixed;
+  z-index: 100;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  div.btn-toolbar {
+    display: inline-block;
+    button {
+      &:extend(.btn-info);
+    }
+  }
 }
