--- a/thin/templates/thin/base.html
+++ b/thin/templates/thin/base.html
@@ -93,8 +93,8 @@
     {% block content %}
     {% endblock %}
   </div>
+  {% include "thin/ipa_input.html" %}
   <footer>
-    {% include "thin/ipa_input.html" %}
     <div class="footer">
       <div class="container text-muted">
         <ul class="pull-left breadcrumb breadcrumb-bar">
@@ -103,7 +103,7 @@
           <li><a href="#">Help</a></li>
         </ul>
         <ul class="pull-right breadcrumb breadcrumb-bar">
-          <li><a id="ipa-toggle" href="#">Click to toggle IPA Keyboard</a></li>
+{#          <li><a id="ipa-toggle" href="#">Click to toggle IPA Keyboard</a></li>#}
           <li><span class="copyright">Software Studio </span></li>
         </ul>
       </div>
