Comparison detail page

--- a/thin/templates/thin/comparison_detail.html
+++ b/thin/templates/thin/comparison_detail.html
@@ -4,15 +4,28 @@
 <div class="panel panel-default">
 <div class="panel-heading">
   <h3 class="panel-title">{{comparison.name}}</h3>
-  <a href="{% url 'comparison_edit' comparison.id %}" class="btn btn-primary btn-xs pull-right">Edit </a></li>
+  <a href="{% url 'comparison_edit' comparison.id %}" class="btn btn-primary btn-xs pull-right"> Edit </a></li>
 </div>
 <table class="table table-striped">
     {% for comparison_entry in comparison_entries %}
-    <tr>
-      <td>{{ comparison_entry.transcription.ipa }}</a></td>
+    <tr id="{{ comparison_entry.id }}">
+      <td><input value="{{ comparison_entry.transcription.ipa }}" class="form-control trans-form" readonly="true" name="{{ comparison_entry.transcription.ipa }}"/></td>
+      <td><span class="label label-info current" id="{{ comparison_entry.id }}"></span></td>
+      <td><input class="form-control" id="group1" disabled="true" /></td>
+      <td><input class="form-control" /></td>
+      <td>
+          <div class="checkbox">
+                <label>
+                    <input type="checkbox" class="form-control" />
+                </label>
+          </div>
+      </td>
     </tr>
   {% endfor %}
 </table>
 </div>
+
+<script src="/static/js/keymaster/keymaster.js"></script>
+<script src="/static/js/comparison_entry_controller.js"></script>
 
 {% endblock %}
