Comaprison detail page stuffz

--- a/thin/templates/thin/comparison_detail.html
+++ b/thin/templates/thin/comparison_detail.html
@@ -24,7 +24,7 @@
               <td align="center"><span class="label label-info current" id="{{ comparison_entry.id }}"></span></td>
               <td><input class="form-control" id="group1" disabled="true" size="2"></td>
               <td><input class="form-control" size="2"></td>
-              <td align="center"><input type="checkbox" class="form-control"></td>
+              <td align="center"><input type="checkbox"></td>
             </tr>
         {% empty %}
             <tr>
@@ -34,7 +34,6 @@
     </table>
 </div>
 
-<script src="/static/js/keymaster/keymaster.js"></script>
 <script src="/static/js/comparison_entry_controller.js"></script>
 
 {% endblock %}
