--- a/thin/templates/thin/comparison_detail.html
+++ b/thin/templates/thin/comparison_detail.html
@@ -1,7 +1,7 @@
 {% extends "thin/base.html" %}
 
 {% block content %}
-<script src="{{ STATIC_URL }}js/comparison_entry_controller.js"></script>
+<script src="{{ STATIC_URL }}js/comparisons.js"></script>
 <div class="panel panel-default">
 <div class="panel-heading">
   <h3 class="panel-title">{{comparison.name}}</h3>
