Added a way to disable keyboard for that page. Look at dictionary_add template

--- a/thin/templates/thin/base.html
+++ b/thin/templates/thin/base.html
@@ -10,7 +10,7 @@
   <script src="//netdna.bootstrapcdn.com/bootstrap/3.1.1/js/bootstrap.min.js"></script>
 </head>
 
-<body>
+<body {% block ipa-toggle %}{% endblock %}>
 
 {% url 'home' as home_path %}
 <div id="everything">
