--- a/thin/templates/thin/dictionary_add.html
+++ b/thin/templates/thin/dictionary_add.html
@@ -2,6 +2,7 @@
 
 {% load bootstrap %}
 
+{% block ipa-toggle %}no-ipa="no-ipa"{% endblock %}
 {% block content %}
 <div class="row">
   <div class="col-md-4">
