--- a/thin/templates/thin/comparison_detail.html
+++ b/thin/templates/thin/comparison_detail.html
@@ -7,7 +7,7 @@
   <h3 class="panel-title">{{comparison.name}}</h3>
   <a href="{% url 'comparison_edit' comparison.id %}" class="btn btn-primary btn-xs pull-right"> Edit </a></li>
 </div>
-    <table class="table table-striped">
+    <table class="table table-striped" style="cursor: pointer;">
         {% if comparison_entries %}
         <thead>
             <tr>
@@ -19,9 +19,9 @@
         </thead>
         {% endif %}
         {% for comparison_entry in comparison_entries %}
-            <tr>
-              <td><input value="{{ comparison_entry.transcription.ipa }}" class="form-control trans-form" size="5" readonly="true" name="{{ comparison_entry.transcription.ipa }}"></td>
-              <td><input class="form-control" id="group1" disabled="disabled"><span class="label label-info current" id="{{ comparison_entry.id }}"></span></td>
+            <tr class="trans-form">
+              <td><div class="form-control trans-form">{{ comparison_entry.transcription.ipa }}</div></td>
+              <td><input style="width: inherit; display: inline-block;" class="form-control" id="group1" disabled="disabled"/><span class="label label-info current" id="{{ comparison_entry.id }}" style="display: inline-block;"></span></td>
               <td><input class="form-control" size="1"></td>
               <td align="center"><input type="checkbox"></td>
             </tr>
