Keyboard lookin good ;)

--- a/thin/static/css/bootstrap/bootstrap.css
+++ b/thin/static/css/bootstrap/bootstrap.css
@@ -1201,8 +1201,7 @@ ul ol,
 ol ol {
   margin-bottom: 0;
 }
-.list-unstyled,
-ul.dash {
+.list-unstyled {
   padding-left: 0;
   list-style: none;
 }
@@ -6063,155 +6062,4 @@ button.close {
   .hidden-print {
     display: none !important;
   }
-}
-html,
-body {
-  height: 100%;
-}
-/*
- * Inverse Dropdown
- */
-.dropdown-inverse {
-  background-color: #222;
-  border-color: #080808;
-}
-.dropdown-inverse > li > a {
-  color: #999;
-}
-.dropdown-inverse > li > a:hover {
-  color: #fff;
-  background-color: #F00;
-}
-.dropdown-inverse > li > a {
-  color: #999;
-}
-.dropdown-inverse > li > a:hover,
-.dropdown-inverse > li > a:focus {
-  color: white;
-  background-color: #428bca;
-  /*$primary-color*/
-}
-.logo {
-  vertical-align: bottom;
-  margin-right: 10px;
-}
-#everything {
-  min-height: 100%;
-  position: relative;
-}
-#body {
-  padding-bottom: calc(315px);
-}
-/*
- * Footer
- */
-footer {
-  position: fixed;
-  bottom: 0;
-  width: 100%;
-}
-.footer {
-  background-color: #222;
-}
-footer .breadcrumb {
-  margin: 0;
-  background-color: #222;
-}
-/*
- * Breadcrumbs
- */
-.breadcrumb-inverse {
-  background-color: #222;
-}
-.breadcrumb li + li:before {
-  content: "/";
-}
-.breadcrumb li + li.pull-right:before,
-.breadcrumb li + li.no-bullet:before {
-  content: "";
-}
-.breadcrumb-bar li + li:before {
-  content: "|\00a0";
-}
-.copyright:after {
-  content: "\00a9";
-}
-td > textarea {
-  height: 24px;
-  width: 300px;
-  resize: none;
-}
-.gloss-row {
-  margin-bottom: 25px;
-}
-/*
- * Tables and Panels
- */
-.panel > .table {
-  padding-bottom: 0px;
-}
-.panel-heading > h3.panel-title {
-  display: inline;
-}
-/*
- * Lists
- */
-.bottom-padding > li {
-  padding-bottom: 5px;
-}
-/*
- * Unordered List
- */
-ul.dash {
-  padding-left: 25px;
-}
-ul.dash > li:before {
-  content: "\2014";
-}
-/*
- * IPA Keyboard
- */
-div#ipa-keyboard {
-  pointer-events: none;
-  position: fixed;
-  bottom: 36px;
-  width: 100%;
-  margin: 0 auto;
-  text-align: center;
-}
-div#ipa-keyboard div#ipa-buttons {
-  pointer-events: auto;
-  padding: 10px;
-  padding-top: 0px;
-  border-radius: 10px 10px 0 0;
-  background-color: #222;
-  display: inline-block;
-}
-div#ipa-keyboard div#ipa-buttons div.arrow {
-  color: white;
-  padding: 15px;
-  margin-left: -10px;
-  margin-right: -10px;
-  margin-bottom: 5px;
-  border-radius: 10px 10px 0 0;
-  cursor: pointer;
-  background-color: #428bca;
-}
-div#ipa-keyboard div#ipa-buttons div.arrow:hover {
-  background-color: #6aa3d5;
-}
-div#ipa-keyboard div#ipa-buttons div.btn-toolbar {
-  display: inline-block;
-}
-.rotate-0,
-.rotate-90,
-.rotate-180 {
-  transform: rotate(0deg);
-  transition: transform 2s;
-}
-.rotate-90 {
-  transform: rotate(90deg);
-}
-.rotate-180 {
-  transform: rotate(180deg);
 }
