--- a/thin/templates/thin/ipa_input.html
+++ b/thin/templates/thin/ipa_input.html
@@ -2,7 +2,7 @@
 <script src="{% static 'js/ipa.js' %}"></script>
 <div id="ipa-keyboard">
 <div id="ipa-buttons">
-  <div id="ipa-toggler" class="arrow"><span class="caret pull-right"></span></div>
+  <div id="ipa-toggler" class="arrow"><span class="text">IPA Keyboard</span><span class="caret pull-right rotate-180"></span></div>
   <div id="ipa-keys">
   <div class="btn-toolbar">
     <span class="btn-group btn-group-sm">
