--- a/thin/static/css/websurv.css
+++ b/thin/static/css/websurv.css
@@ -6174,7 +6174,7 @@ ul.dash > li:before {
 div#ipa-keyboard {
   pointer-events: none;
   position: fixed;
-  bottom: 36px;
+  bottom: 26px;
   width: 100%;
   margin: 0 auto;
   text-align: center;
@@ -6189,7 +6189,7 @@ div#ipa-keyboard div#ipa-buttons {
 }
 div#ipa-keyboard div#ipa-buttons div.arrow {
   color: white;
-  padding: 15px;
+  position: relative;
   margin-left: -10px;
   margin-right: -10px;
   margin-bottom: 5px;
@@ -6200,18 +6200,44 @@ div#ipa-keyboard div#ipa-buttons div.arrow {
 div#ipa-keyboard div#ipa-buttons div.arrow:hover {
   background-color: #6aa3d5;
 }
+div#ipa-keyboard div#ipa-buttons div.arrow span.text {
+  padding: none;
+  margin-top: -5px;
+  font-size: .8em;
+}
+div#ipa-keyboard div#ipa-buttons div.arrow .caret {
+  position: absolute;
+  right: 10px;
+  top: 6px;
+  display: inline-block;
+  width: 0;
+  height: 0;
+  margin-left: -10px;
+  vertical-align: middle;
+  border-top: 7px solid;
+  border-right: 7px solid transparent;
+  border-left: 7px solid transparent;
+}
 div#ipa-keyboard div#ipa-buttons div.btn-toolbar {
   display: inline-block;
 }
 .rotate-0,
 .rotate-90,
 .rotate-180 {
+  -webkit-transform: rotate(0deg);
+  -moz-transform: rotate(0deg);
   transform: rotate(0deg);
-  transition: transform 2s;
+  -webkit-transition: transform 0.5s;
+  -moz-transition: transform 0.5s;
+  transition: transform 0.5s;
 }
 .rotate-90 {
+  -webkit-transform: rotate(90deg);
+  -moz-transform: rotate(90deg);
   transform: rotate(90deg);
 }
 .rotate-180 {
+  -webkit-transform: rotate(180deg);
+  -moz-transform: rotate(180deg);
   transform: rotate(180deg);
 }
