--- a/thin/templates/thin/base.html
+++ b/thin/templates/thin/base.html
@@ -26,7 +26,7 @@
           <span class="icon-bar"></span>
         </button>
 {#        <a class="navbar-brand" href="{{ home_path }}"><img class="navbar-logo" src="http://placehold.it/80x50&text=Logo"/></a>#}
-        <a class="navbar-brand" href="{{ home_path }}">WebSurv</a>
+        <a class="navbar-brand" href="{{ home_path }}">WebSurv<small> v{% get_app_version %}</small></a>
       </div>
       <div class="collapse navbar-collapse" id="bs-navbar-collapse">
         <ul class="nav navbar-nav">
