Fix transition for chrome

--- a/thin/static/css/websurv.less
+++ b/thin/static/css/websurv.less
@@ -189,8 +189,8 @@ div#ipa-keyboard {
   -moz-transform: rotate(0deg);
   transform: rotate(0deg);
   @speed: .5s;
-  -webkit-transition: transform @speed;
-  -moz-transition: transform @speed;
+  -webkit-transition: -webkit-transform @speed;
+  -moz-transition: -moz-transform @speed;
   transition: transform @speed;
 }
 
