--- a/thin/static/css/websurv.css
+++ b/thin/static/css/websurv.css
@@ -6227,8 +6227,8 @@ div#ipa-keyboard div#ipa-buttons div.btn-toolbar {
   -webkit-transform: rotate(0deg);
   -moz-transform: rotate(0deg);
   transform: rotate(0deg);
-  -webkit-transition: transform 0.5s;
-  -moz-transition: transform 0.5s;
+  -webkit-transition: -webkit-transform 0.5s;
+  -moz-transition: -moz-transform 0.5s;
   transition: transform 0.5s;
 }
 .rotate-90 {
