--- a/thin/templates/thin/comparison_detail.html
+++ b/thin/templates/thin/comparison_detail.html
@@ -1,42 +1,47 @@
 {% extends "thin/base.html" %}
 
 {% block content %}
-{#<script src="{{ STATIC_URL }}js/comparisons.js"></script>#}
-<div class="panel panel-default">
-<div class="panel-heading">
-  <h3 class="panel-title">{{comparison.name}}</h3>
-  <a href="{% url 'comparison_edit' comparison.id %}" class="btn btn-primary btn-xs pull-right"> Edit </a></li>
-</div>
+  {#<script src="{{ STATIC_URL }}js/comparisons.js"></script>#}
+  <script src="{{ STATIC_URL }}js/comparisons-simple.js"></script>
+  <div class="panel panel-default">
+    <div class="panel-heading">
+      <h3 class="panel-title">{{ comparison.name }}</h3>
+      <a href="{% url 'comparison_edit' comparison.id %}" class="btn btn-primary btn-xs pull-right"> Edit </a>
+    </div>
     <table class="table table-striped table-hover" style="cursor: pointer;">
-        {% if comparison_entries %}
+      {% if comparison_entries %}
         <thead>
-            <tr>
-                <th class="comp1">Transcription</th>
-                <th align="left">1</th>
-                <th class="comp">Group</th>
-                <th class="comp">Exclude</th>
-            </tr>
+        <tr>
+          <th class="comp1">Transcription</th>
+          <th align="left">1</th>
+          <th class="comp">Group</th>
+          <th class="comp">Exclude</th>
+          <th></th>
+        </tr>
         </thead>
-        {% endif %}
-        {% for comparison_entry in comparison_entries %}
-            <tr class="trans-form">
-              <td align="left" class="transcriptions"><div>{{ comparison_entry.transcription.ipa }}</div></td>
-              <td align="left" class="aligned-form form-inline">
-              <ul class="list-inline">
-                {% for letter in comparison_entry.transcription.ipa %}
-                  <li><label>{{ letter }}<input class="form-control" style="width: 50px;" type="number" min="1" value="1"/></label></li>
-                {% endfor %}
-              </ul>
-              </td>
-              <td class="grouping"><input class="form-control" size="1"></td>
-              <td align="center" class="exclude"><input type="checkbox"></td>
-            </tr>
-        {% empty %}
-            <tr>
-                <td>No transcriptions with this comparison.</td>
-            </tr>
-        {% endfor %}
+      {% endif %}
+      {% for comparison_entry in comparison_entries %}
+        <tr class="trans-form" id="{{ comparison_entry.transcription.id }}">
+          <td align="left" class="transcriptions">
+            <div>{{ comparison_entry.transcription.ipa }}</div>
+          </td>
+          <td align="left" class="aligned-form form-inline">
+            <ul class="list-inline">
+              {% for letter in comparison_entry.transcription.ipa %}
+                <li><label>{{ letter }}<input name="{{ forloop.counter0 }}" class="form-control" style="width: 60px;" type="number" min="1" value="1"/></label></li>
+              {% endfor %}
+            </ul>
+          </td>
+          <td class="grouping"><input name="group" class="form-control" size="1"></td>
+          <td align="center" class="exclude"><input name="exclude" type="checkbox"></td>
+          <td><button type="submit" class="btn btn-primary">Save</button></td>
+        </tr>
+      {% empty %}
+        <tr>
+          <td>No transcriptions with this comparison.</td>
+        </tr>
+      {% endfor %}
     </table>
-</div>
+  </div>
 
 {% endblock %}
