--- a/thin/templates/thin/base.html
+++ b/thin/templates/thin/base.html
@@ -10,6 +10,7 @@
   <script src="//netdna.bootstrapcdn.com/bootstrap/3.1.1/js/bootstrap.min.js"></script>
   <script src="//code.jquery.com/jquery-1.11.0.min.js"></script>
   <script src="//code.jquery.com/ui/1.10.4/jquery-ui.min.js"></script>
+  <script src="{{ STATIC_URL }}js/jquery.turbolinks.js"></script>
   <script src="{{ STATIC_URL }}turbolinks/turbolinks.js"></script>
 </head>
 
