Changed initial hiding of keyboard to html instead of js

--- a/thin/templates/thin/base.html
+++ b/thin/templates/thin/base.html
@@ -96,7 +96,7 @@
     {% block content %}
     {% endblock %}
   </div>
-  {% include "thin/ipa_input.html" %}
+  {% include "thin/ipa_keyboard.html" %}
   <footer>
     <div class="footer">
       <div class="container text-muted">
