--- a/thin/templates/thin/ipa_keyboard.html
+++ b/thin/templates/thin/ipa_keyboard.html
@@ -1,9 +1,9 @@
 {% load static from staticfiles %}
 <script src="{% static 'js/ipa.js' %}"></script>
-<div id="ipa-keyboard">
+<div id="ipa-keyboard" style=height:30px;">
 <div id="ipa-buttons">
   <div id="ipa-toggler" class="arrow"><span class="text">IPA Keyboard</span><span class="caret pull-right rotate-180"></span></div>
-  <div id="ipa-keys">
+  <div id="ipa-keys" style="visibility:hidden;">
   <div class="btn-toolbar">
     <span class="btn-group btn-group-sm">
       <button name="a script" type="button" title="open back unrounded vowel (Ctrl+A)" class="btn">ɑ</button>
